@@ -2,7 +2,11 @@
 	- refine delimiter detection for CSV
 	- added append_external_list() method (and filter support) for an
 	  external list of files to append
-	- count filter now supports dates and strings for min() and max() aggregators
+	- count filter now supports dates and strings for min() and max()
+	  aggregators
+	- add dayfirst parameter to normalise_date() (defaults to True)
+	- have CleanFilter prescan the dataset for date cleaning, and
+	  default to dayfirst unless unambiguous MMDD format is more common
 
 2018-06-29 Release 4.9
 	- support additional separators besides comma for CSV-like files
